--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "lucide-react": "^0.554.0",
     "maath": "^0.10.8",
     "next": "^16.0.7",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.2",
     "viem": "^2.40.3",
